Version 1.0-devel - Development
    - The path to MATLAB can now be specified in the CMake command line
      (not hard coded anymore), such as
          cmake -DWITH_MATLAB="/Applications/MATLAB_R2017b.app" ..

Version 1.0-rc4 - Release Candidate 4, 24 January 2018
    - Changed qpp::ket operator "" _q() to qpp::ket operator "" _ket()
    - Added qpp::bra operator "" _bra() and qpp::cmat operator "" _prj() as well
    - Updated documentation

Version 1.0-rc3 - Release Candidate 3, 21 January 2018
    - License change from GPL to MIT
    - Added Visual Studio 2017 solution
    - Added support for AppVeyor continuous integration 
    - Added support for reversible classical circuits, via the following
      classes in "experimental.h":
        qpp::experimental::Dynamic_bitset
        qpp::experimental::Bit_circuit
    - Added qpp::ket operator "" _q() helper in "functions.h" for constructing
        multi-partite qubit kets
    - Added comprehensive Wiki instead of the quick starting guide  

Version 1.0-rc2 - Release Candidate 2, 6 September 2017
    - Added serialization capabilities for the PRNG in qpp::RandomDevices from
      "classes/random_devices.h":
        qpp::RandomDevices::load() - loads the state of PRNG from a stream
        qpp::RandomDevices::save() - saves the state of PRNG to a stream
    - Added a getter for qpp::RandomDevices::prng_ (now with private access):
        qpp::RandomDevices::get_prng()
    - Eigen3 is detected automatically by CMake (if Eigen3 was installed via a
        package manager). If not, it can be specified manually by passing the
        -DEIGEN3_INCLUDE_DIR=path_to_eigen3 flag to the CMake command line.

Version 1.0-rc1 - Release Candidate 1, 11 November 2016
    - Slight performance improvements (lambda workers do not capture by value
        anymore)
    - API change in "classes/exception.h": now all Quantum++ exceptions have
        their own type, being derived from the base exception class