@@ -2,6 +2,7 @@ Version 1.0-devel - Development
     - The path to MATLAB can now be specified in the CMake command line
       (not hard coded anymore), such as
           cmake -DWITH_MATLAB="/Applications/MATLAB_R2017b.app" ..
+    - Minor bug in qpp::Exception::what(), thanks Nick Lewycky for spotting it
 
 Version 1.0-rc4 - Release Candidate 4, 24 January 2018
     - Changed qpp::ket operator "" _q() to qpp::ket operator "" _ket()
